--- a/fastcalc/fastcalc/FastCalc/MainViewController.xib
+++ b/fastcalc/fastcalc/FastCalc/MainViewController.xib
@@ -14,8 +14,8 @@
 			<string>IBUISwipeGestureRecognizer</string>
 			<string>IBUIImageView</string>
 			<string>IBProxyObject</string>
-			<string>IBUILabel</string>
 			<string>IBUIButton</string>
+			<string>IBUILabel</string>
 			<string>IBUITableViewController</string>
 			<string>IBUITableView</string>
 			<string>IBUIPageControl</string>
@@ -217,7 +217,7 @@
 												<string key="NSFrameSize">{152, 43}</string>
 												<reference key="NSSuperview" ref="267428017"/>
 												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="883645332"/>
+												<reference key="NSNextKeyView"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIOpaque">NO</bool>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -430,7 +430,6 @@
 						<string key="NSFrame">{{259, 486}, {50, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -587,14 +586,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">mTotalLbl</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="84019993"/>
-					</object>
-					<int key="connectionID">41</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">mPriceView</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="267428017"/>
@@ -616,14 +607,6 @@
 						<reference key="destination" ref="731729578"/>
 					</object>
 					<int key="connectionID">64</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">mPriceLbl</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="883645332"/>
-					</object>
-					<int key="connectionID">71</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -664,6 +647,22 @@
 						<reference key="destination" ref="749998345"/>
 					</object>
 					<int key="connectionID">88</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mPriceLbl</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="883645332"/>
+					</object>
+					<int key="connectionID">71</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mTotalLbl</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="84019993"/>
+					</object>
+					<int key="connectionID">41</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -922,12 +921,6 @@
 						<string key="objectName">Price View</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">36</int>
-						<reference key="object" ref="84019993"/>
-						<reference key="parent" ref="267428017"/>
-						<string key="objectName">Price Label</string>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">61</int>
 						<reference key="object" ref="578683265"/>
 						<reference key="parent" ref="267428017"/>
@@ -947,11 +940,6 @@
 						<reference key="object" ref="97418279"/>
 						<reference key="parent" ref="191373211"/>
 						<string key="objectName">Price View Mask</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">70</int>
-						<reference key="object" ref="883645332"/>
-						<reference key="parent" ref="267428017"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">72</int>
@@ -988,9 +976,20 @@
 						<reference key="parent" ref="550177060"/>
 					</object>
 					<object class="IBObjectRecord">
+						<int key="objectID">70</int>
+						<reference key="object" ref="883645332"/>
+						<reference key="parent" ref="267428017"/>
+					</object>
+					<object class="IBObjectRecord">
 						<int key="objectID">90</int>
 						<reference key="object" ref="585436960"/>
 						<reference key="parent" ref="267428017"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">36</int>
+						<reference key="object" ref="84019993"/>
+						<reference key="parent" ref="267428017"/>
+						<string key="objectName">Price Label</string>
 					</object>
 				</array>
 			</object>
@@ -1037,7 +1036,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">90</int>
+			<int key="maxID">92</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1083,6 +1082,7 @@
 						<string key="mPriceLbl">UILabel</string>
 						<string key="mPriceMask">UIImageView</string>
 						<string key="mPriceView">UIView</string>
+						<string key="mPriceViewBackground">UIView</string>
 						<string key="mThanksLabel">UILabel</string>
 						<string key="mThanksView">UIView</string>
 						<string key="mTotalLbl">UILabel</string>
@@ -1144,6 +1144,10 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="mPriceView">
 							<string key="name">mPriceView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="mPriceViewBackground">
+							<string key="name">mPriceViewBackground</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="mThanksLabel">
